--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "postinstall:electron": "node postinstall",
+    "postinstall": "electron-builder install-app-deps",
     "pack": "build --dir",
     "dist": "build",
-    "electron:windows": "electron-builder build --windows",
-    "electron:mac": "electron-builder build --mac"
+    "electron:windows": "npm run postinstall && electron-builder build --windows",
+    "electron:mac": "npm run postinstall && electron-builder build --mac"
   },
   "repository": "https://github.com/casinocoin/casinocoin-ledger-demo-app",
   "keywords": [
@@ -38,8 +38,9 @@
   },
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^8.0.3",
+    "electron": "^6.1.9",
     "electron-builder": "^22.3.6",
+    "electron-builder-squirrel-windows": "^22.4.0",
     "electron-rebuild": "^1.10.0"
   },
   "dependencies": {
